--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,18 +10,35 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
+      # 1. Checkout is REQUIRED to see your Dockerfile
+      -
+        name: Checkout
+        uses: actions/checkout@v4
+
+      # 2. Set up QEMU to emulate arm64 on the amd64 runner
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      # 3. Set up Docker Buildx (Required for multi-arch builds)
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       -
         name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+
+      # 4. Build for both platforms
       -
         name: Build and push
         uses: docker/build-push-action@v6
         with:
+          context: .
           push: true
           tags: otokatli/build123d:latest
+          # Specify the target platforms here
+          platforms: linux/amd64,linux/arm64
